# rstorch

./: Cargo.toml  README.md  build.rs  map.mermaid  run_tests.sh
src/: lib.rs  tensor.rs
src/autograd/: functions.rs  mod.rs
src/csrc/: cpu.cpp  cpu.h  cuda.cu  cuda.h  distributed.cpp  distributed.h  tensor.cpp  tensor.h  tensor_impl.cpp
src/distributed/: distributed.rs  mod.rs
src/distributed/run/: main.rs  mod.rs
src/nn/: activation.rs  functional.rs  loss.rs  mod.rs  module.rs  parallel.rs  parameter.rs
src/nn/modules/: linear.rs  mod.rs
src/optim/: mod.rs  optimizer.rs
src/optim/optimizers/: mod.rs  sgd.rs
src/torchvision/: mod.rs  transforms.rs
src/torchvision/datasets/: mnist.rs  mod.rs
src/utils/: functions.rs  mod.rs
src/utils/data/: batch.rs  dataloader.rs  dataset.rs  distributed.rs  example.rs  field.rs  mod.rs
tests/: README.md  autograd_test.rs  basic.rs  distributed_test.rs  test_autograd.rs  test_dataset.rs  test_distributed.rs  test_nn.rs  test_operations.rs
tests/integration/: distributed_test.rs  test_cuda_performance.rs  test_dataset.rs  test_distributed.rs  test_full_training.rs  test_mnist_training.rs  test_nn.rs  test_nn_components.rs
tests/unit/: autograd_test.rs  basic.rs  test_autograd.rs  test_nn_unit.rs  test_operations.rs  test_optim_unit.rs  test_tensor_unit.rs
