[package]
name = "rstorch"
version = "0.1.0"
edition = "2021"

[dependencies]
ndarray = "0.15"
ndarray-rand = "0.14"
rand = "0.8"
clap = { version = "4.5", features = ["derive"] }
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
flate2 = "1.0"
reqwest = { version = "0.11", features = ["blocking"] }
tar = "0.4"
zip = "0.6"

[build-dependencies]
cc = "1.0"

# Unit tests
[[test]]
name = "test_tensor_unit"
path = "tests/unit/test_tensor_unit.rs"

[[test]]
name = "test_nn_unit"
path = "tests/unit/test_nn_unit.rs"

[[test]]
name = "test_optim_unit"
path = "tests/unit/test_optim_unit.rs"

[[test]]
name = "autograd_test"
path = "tests/unit/autograd_test.rs"

[[test]]
name = "test_autograd"
path = "tests/unit/test_autograd.rs"

[[test]]
name = "basic"
path = "tests/unit/basic.rs"

[[test]]
name = "test_operations"
path = "tests/unit/test_operations.rs"

# Integration tests
[[test]]
name = "test_full_training"
path = "tests/integration/test_full_training.rs"

[[test]]
name = "test_nn_components"
path = "tests/integration/test_nn_components.rs"

[[test]]
name = "test_nn"
path = "tests/integration/test_nn.rs"

[[test]]
name = "test_dataset"
path = "tests/integration/test_dataset.rs"

[[test]]
name = "distributed_test"
path = "tests/integration/distributed_test.rs"

[[test]]
name = "test_distributed"
path = "tests/integration/test_distributed.rs"

[[test]]
name = "test_mnist_training"
path = "tests/integration/test_mnist_training.rs"

[[test]]
name = "test_cuda_performance"
path = "tests/integration/test_cuda_performance.rs" 